--- a/THE ONE REMINDER/reminderlist.html
+++ b/THE ONE REMINDER/reminderlist.html
@@ -20,7 +20,13 @@
             </svg><h1 id="headerLogo" class="font-weight-gl">memento</h1>  
     </nav>
     <div class="row d-flex justify-content-center container">
+      
         <div class="col-md-8">
+          <h2>Hello, User!</h2>
+          <!-- Search form -->
+            <div class="active-pink-3 active-pink-4 mb-4">
+              <input class="form-control" type="text" placeholder="Search through reminders" aria-label="Search">
+            </div>
             <div class="card-hover-shadow-2x mb-3 card">
                 <div class="card-header-tab card-header">
                     <div class="card-header-title font-size-lg text-capitalize font-weight-normal"><i class="fa fa-tasks"></i>&nbsp;Task Lists</div>
